--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "type":"module",
-  "description": "Asistensi API",
+  "description": "Users RESTful API",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
